--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <title>project12</title>
     </head>
     <body>
+       <main>
         <div class="proj">
             <div class="image">
                 <!--<img src="images/image-product-desktop.jpg"alt="">-->
@@ -31,5 +32,6 @@
             </div>
 
         </div>
+     </main>
     </body>
 </html>
